Update environment configuration and add seed script for blogsite database

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 NODE_ENV=production
 REDIS_HOST=redis
 REDIS_PORT=6379
-POSTGRES_HOST=postgres
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_DB=postgres_db
-POSTGRES_USER=postgres_user
-POSTGRES_PASSWORD=postgres_pswd
+POSTGRES_DB=blogsite_database
+POSTGRES_USER=blogsite_user
+POSTGRES_PASSWORD=password
