--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:14
+RUN groupadd -r your_group && useradd -r -g your_group your_user
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
