--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^9.2.0",
     "apollo-server-express": "^2.26.2",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "faker": "^6.6.6",
     "graphql": "^15.9.0",
+    "graphql-request": "^7.1.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "redis": "^3.1.2"
